Fix Layout Issues

--- a/web_app/assets/dashboard.css
+++ b/web_app/assets/dashboard.css
@@ -15,7 +15,7 @@ body {
     margin: 20px;
     background-color: #28283c;
     color: aliceblue;
-    height: 400px;
+    height: 30%;
     border-radius: 20px;
     display: flex;
     justify-content: center;
@@ -42,7 +42,7 @@ body {
 
 .divGraphs {
     padding: 15px;
-    height: 480px;
+    height: 30%;
 }
 
 .divInputs {
